# qvartools

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.gpu  HANDOVER.md  INSTALL.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.claude/skills/python-type-safety/: SKILL.md
.claude/skills/workflow-patterns/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml
docs/: Makefile  api_reference.md  architecture.md  examples.md  experiments_guide.md  make.bat
docs/decisions/: 001-skqd-naming-and-nqs-interoperability.md
docs/source/: conf.py  index.rst
docs/source/api/: diag.rst  flows.rst  hamiltonians.rst  krylov.rst  molecules.rst  nqs.rst  pipeline.rst  samplers.rst  solvers.rst
docs/source/developer_guide/: extending_samplers.rst  extending_solvers.rst
docs/source/getting_started/: installation.rst  quickstart.rst
docs/source/tutorials/: beh2_pipeline.rst  custom_solver.rst  h2_pipeline.rst
docs/source/user_guide/: overview.rst  pipelines.rst  yaml_configs.rst
examples/: README.md  basic_h2.py  compare_solvers.py  custom_pipeline.py  spin_hamiltonian.py
experiments/: __init__.py  config_loader.py  profile_pipeline.py
experiments/configs/: direct_ci_krylov.yaml  direct_ci_sqd.yaml  flow_ci_krylov.yaml  flow_ci_sqd.yaml  flow_only_krylov.yaml  flow_only_sqd.yaml  hf_only_krylov.yaml  iterative_nqs_krylov.yaml  iterative_nqs_sqd.yaml
experiments/methods/: __init__.py  direct_ci_krylov.py  direct_ci_sqd.py  flow_ci_krylov.py  flow_ci_sqd.py  flow_only_krylov.py  flow_only_sqd.py  hf_only_krylov.py  iterative_nqs_krylov.py  iterative_nqs_sqd.py
src/qvartools/: __init__.py  _logging.py  pipeline.py  pipeline_config.py
src/qvartools/_utils/: __init__.py
src/qvartools/_utils/formatting/: __init__.py  bitstring_format.py
src/qvartools/_utils/gpu/: __init__.py  diagnostics.py  fci_solver.py  linear_algebra.py
src/qvartools/_utils/hashing/: __init__.py  config_hash.py  connection_cache.py
src/qvartools/_utils/scaling/: __init__.py  quality_presets.py  system_scaler.py
src/qvartools/diag/: __init__.py
src/qvartools/diag/eigen/: __init__.py  davidson.py  eigensolver.py  eigenvalue.py  projected_hamiltonian.py
src/qvartools/diag/selection/: __init__.py  bitstring.py  diversity_selection.py  excitation_rank.py
src/qvartools/flows/: __init__.py
src/qvartools/flows/networks/: __init__.py  coupling_network.py  discrete_flow.py  particle_conserving_flow.py
src/qvartools/flows/training/: __init__.py  flow_nqs_training.py  gumbel_topk.py  loss_functions.py  physics_guided_training.py
src/qvartools/hamiltonians/: __init__.py  hamiltonian.py  integrals.py  pauli_string.py
src/qvartools/hamiltonians/molecular/: __init__.py  hamiltonian.py  jordan_wigner.py  pauli_mapping.py  slater_condon.py
src/qvartools/hamiltonians/spin/: __init__.py  heisenberg.py  tfim.py
src/qvartools/krylov/: __init__.py
src/qvartools/krylov/basis/: __init__.py  flow_guided.py  sampler.py  skqd.py
src/qvartools/krylov/circuits/: __init__.py  circuit_skqd.py  spectral.py  sqd.py
src/qvartools/krylov/expansion/: __init__.py  krylov_expand.py  residual_config.py  residual_expander.py  residual_expansion.py  selected_ci_expander.py
src/qvartools/methods/: __init__.py
src/qvartools/methods/nqs/: __init__.py  hi_nqs_skqd.py  hi_nqs_sqd.py  nqs_skqd.py  nqs_sqd.py
src/qvartools/molecules/: __init__.py  registry.py
src/qvartools/nqs/: __init__.py  adapters.py  neural_state.py
src/qvartools/nqs/architectures/: __init__.py  complex_nqs.py  dense.py  rbm.py
src/qvartools/nqs/transformer/: __init__.py  attention.py  autoregressive.py
src/qvartools/samplers/: __init__.py  sampler.py
src/qvartools/samplers/classical/: __init__.py  nf_sampler.py  transformer_nf_sampler.py
src/qvartools/samplers/quantum/: __init__.py  cudaq_circuits.py  cudaq_sampler.py  lucj_sampler.py  trotter_sampler.py
src/qvartools/solvers/: __init__.py  solver.py
src/qvartools/solvers/iterative/: __init__.py  _utils.py  iterative_skqd.py  iterative_sqd.py
src/qvartools/solvers/krylov/: __init__.py  dci_skqd.py  nf_skqd.py  skqd.py  skqd_expansion.py
src/qvartools/solvers/reference/: __init__.py  ccsd.py  fci.py
src/qvartools/solvers/subspace/: __init__.py  cipsi.py  sqd.py  sqd_batched.py
tests/: conftest.py  test_config_loader.py
tests/test_diag/: test_diversity.py  test_eigensolver.py
tests/test_flows/: test_discrete_flow.py  test_particle_conserving.py
tests/test_hamiltonians/: test_base.py  test_molecular.py  test_spin.py
tests/test_integration/: test_beh2_pipeline.py  test_h2_pipeline.py  test_spin_pipeline.py
tests/test_krylov/: test_basis_sampler.py  test_naming.py  test_residual.py  test_skqd.py
tests/test_nqs/: test_adapters.py  test_complex.py  test_dense.py  test_pipeline_nqs_selection.py
tests/test_solvers/: test_base.py
tests/test_utils/: test_connection_cache.py  test_format_utils.py  test_hamiltonian_cache.py  test_logging.py  test_mixed_precision.py  test_transformer_nf_sampler_bug.py
